Agregar boton Obtener Membresia que redirige a Facebook

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ Mobile UI
                     </div>
                 </div>
                 <div class="flex gap-2">
+                    <a href="https://www.facebook.com/profile.php?id=61587337634419" target="_blank" class="btn-primary text-white px-8 py-3 rounded-xl text-[10px] font-black uppercase">🎁 Obtener Membresía</a>
                     <button id="publicLoginBtn" onclick="switchToLogin()" class="btn-primary text-white px-8 py-3 rounded-xl text-[10px] font-black uppercase">🔐 Acceso VIP</button>
                     <button id="adminUploadBtn" onclick="toggleView('admin')" class="btn-primary text-white px-8 py-3 rounded-xl text-[10px] font-black uppercase hidden">Administrar</button>
                     <button id="logoutBtn" onclick="handleLogout()" class="bg-slate-800 text-slate-400 px-6 py-3 rounded-xl text-[10px] font-black uppercase border border-slate-700 hidden">Salir</button>
