--- a/index.html
+++ b/index.html
@@ -300,6 +300,14 @@ Mobile UI
 
                 <textarea id="jsonBox" class="w-full h-60 bg-black/40 rounded-2xl p-6 text-[10px] font-mono text-blue-100/70 border border-slate-800 focus:border-blue-500 mb-6 outline-none" placeholder='Pega el JSON de PeruBPM aquí...'></textarea>
                 
+                <!-- Estado de la subida -->
+                <div id="statusArea" class="hidden mb-6 p-4 bg-slate-900/50 rounded-xl border border-blue-500/30">
+                    <div class="flex items-center gap-3">
+                        <div class="w-3 h-3 bg-blue-500 rounded-full animate-pulse"></div>
+                        <span id="statusLabel" class="text-[10px] font-black text-blue-400 uppercase">Procesando...</span>
+                    </div>
+                </div>
+                
                 <button onclick="uploadPack()" id="upBtn" class="w-full btn-primary py-5 rounded-2xl font-black text-[11px] uppercase tracking-widest shadow-xl shadow-blue-500/20">Iniciar Sincronización Recursiva</button>
             </div>
 
