Corregir configuración de Firebase en public/index.html - Usar variables ofuscadas

--- a/public/index.html
+++ b/public/index.html
@@ -375,9 +375,9 @@ let currentPackName = "perubpm_pack";
         // ============================================
         const firebaseConfig = {
             apiKey: "AIzaSyCgAWYxDqUYm0vzhi9e7AqbCJ96jeD_gfg",
-            authDomain: "perubpm-96377.firebaseapp.com",
-            databaseURL: "https://perubpm-96377-default-rtdb.firebaseio.com",
-            projectId: "perubpm-96377"
+            authDomain: _0x5d4e("cGVydWJwbS05NjM3Ny5maXJlYmFzZWFwcC5jb20="),
+            databaseURL: _0x5d4e("aHR0cHM6Ly9wZXJ1YnBtLTk2Mzc3LWRlZmF1bHQtcnRkYi5maXJlYmFzZWlby5jb20="),
+            projectId: _0x5d4e("cGVydWJwbS05NjM3Nw==")
         };
 
         firebase.initializeApp(firebaseConfig);
