--- a/public/index.html
+++ b/public/index.html
@@ -365,9 +365,10 @@ Mobile UI
     </div>
 
     <script>
-        // URLs de API
-        var API_FOLDER = 'https://api.perubpm.com/catalog/packages/folder/';
-        var API_SLUG = 'https://api.perubpm.com/catalog/packages/slug/';
+        // URLs de API - ofuscadas
+        var _0xa1='perubpm.com';var _0xa2='catalog/packages/';var _0xa3='folder/';var _0xa4='slug/';
+        var API_FOLDER='https://api.'+_0xa1+'/'+_0xa2+_0xa3;
+        var API_SLUG='https://api.'+_0xa1+'/'+_0xa2+_0xa4;
         
         // Desactivar logs en producción
         if (window.location.hostname.indexOf('localhost') === -1 && window.location.hostname.indexOf('127.0.0.1') === -1) {
@@ -386,11 +387,12 @@ let currentPackName = "perubpm_pack";
         // ============================================
 // CONFIGURACIÓN DE FIREBASE
 // ============================================
+var _0xf1='perubpm-96377';var _0xf2='firebaseapp.com';var _0xf3='firebaseio.com';
 const firebaseConfig = {
     apiKey: "AIzaSyCgAWYxDqUYm0vzhi9e7AqbCJ96jeD_gfg",
-    authDomain: "perubpm-96377.firebaseapp.com",
-    databaseURL: "https://perubpm-96377-default-rtdb.firebaseio.com",
-    projectId: "perubpm-96377"
+    authDomain: _0xf1+'.'+_0xf2,
+    databaseURL: 'https://'+_0xf1+'-default-rtdb.'+_0xf3,
+    projectId: _0xf1
 };
 
         firebase.initializeApp(firebaseConfig);
