--- a/public/index.html
+++ b/public/index.html
@@ -366,9 +366,10 @@ Mobile UI
 
     <script>
         // URLs de API - ofuscadas
-        var _0xa1='perubpm.com';var _0xa2='catalog/packages/';var _0xa3='folder/';var _0xa4='slug/';
-        var API_FOLDER='https://api.'+_0xa1+'/'+_0xa2+_0xa3;
-        var API_SLUG='https://api.'+_0xa1+'/'+_0xa2+_0xa4;
+        var _0x7a=[104,116,116,112,115,58,47,47,97,112,105,46];var _0x7b=[112,101,114,117,98,112,109,46,99,111,109];var _0x7c=[99,97,116,97,108,111,103,47,112,97,99,107,97,103,101,115,47];var _0x7d=[102,111,108,100,101,114,47];var _0x7e=[115,108,117,103,47];
+        var _0x7f=function(_0x3a){return String.fromCharCode.apply(null,_0x3a);};
+        var API_FOLDER=_0x7f(_0x7a)+_0x7f(_0x7b)+'/'+_0x7f(_0x7c)+_0x7d;
+        var API_SLUG=_0x7f(_0x7a)+_0x7f(_0x7b)+'/'+_0x7f(_0x7c)+_0x7e;
         
         // Desactivar logs en producción
         if (window.location.hostname.indexOf('localhost') === -1 && window.location.hostname.indexOf('127.0.0.1') === -1) {
@@ -387,12 +388,13 @@ let currentPackName = "perubpm_pack";
         // ============================================
 // CONFIGURACIÓN DE FIREBASE
 // ============================================
-var _0xf1='perubpm-96377';var _0xf2='firebaseapp.com';var _0xf3='firebaseio.com';
+var _0xf1=[112,101,114,117,98,112,109,45,57,54,51,55,55];var _0xf2=[102,105,114,101,98,97,115,101,97,112,112,46,99,111,109];var _0xf3=[102,105,114,101,98,97,115,101,105,111,46,99,111,109];var _0xf4=function(_0x3a){return String.fromCharCode.apply(null,_0x3a);};
+var _0xff=_0xf4(_0xf1);var _0xfe=_0xf4(_0xf2);var _0xfd=_0xf4(_0xf3);
 const firebaseConfig = {
     apiKey: "AIzaSyCgAWYxDqUYm0vzhi9e7AqbCJ96jeD_gfg",
-    authDomain: _0xf1+'.'+_0xf2,
-    databaseURL: 'https://'+_0xf1+'-default-rtdb.'+_0xf3,
-    projectId: _0xf1
+    authDomain: _0xff+'.'+_0xfe,
+    databaseURL: 'https://'+_0xff+'-default-rtdb.'+_0xfd,
+    projectId: _0xff
 };
 
         firebase.initializeApp(firebaseConfig);
