Ofuscar imageMap con URLs de imagenes

--- a/public/index.html
+++ b/public/index.html
@@ -1125,39 +1125,27 @@ const firebaseConfig = {
                 return;
             }
 
-            const imageMap = {
-                "dj city latino": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe5dd32f460477bca687da.jpg",
-                "dj city": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe5dd32f460477bca687da.jpg",
-                "rompe discoteca": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe624d2f460477bca687e3.jpg",
-                "just play": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe610a2f460477bca687df.jpg",
-                "latin remixes": "https://perubpm.blob.core.windows.net/static/assets/categories/68fd936a6f8c5f58eb8a965d.jpg",
-                "dale mas bajo": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe5b652f460477bca687d9.jpg",
-                "bpm latino": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe59032f460477bca687d6.jpg",
-                "latin box": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe61502f460477bca687e0.jpg",
-                "urban zone": "https://perubpm.blob.core.windows.net/static/assets/categories/6933ecf34a14be5b3b3c32a8.jpg",
-                "unlimited latin": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe63092f460477bca687e5.jpg",
-                "cuban pool": "https://perubpm.blob.core.windows.net/static/assets/categories/6933ee8a4a14be5b3b3c32a9.jpg",
-                "heavy hits": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe602b2f460477bca687dd.jpg",
-                "europa remix": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe5f5d2f460477bca687db.jpg",
-                "extended latino": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe5fbc2f460477bca687dc.jpg",
-                "pro latin remix": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe61ff2f460477bca687e2.jpg",
-                "themashup": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe62912f460477bca687e4.jpg",
-                "the mashup": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe62912f460477bca687e4.jpg",
-                "especial pack": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe61b92f460477bca687e1.jpg",
-                "cuba remixes": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe5b052f460477bca687d8.jpg",
-                "8th wonder": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe56b82f460477bca687d4.jpg",
-                "remix mp4": "https://perubpm.blob.core.windows.net/static/assets/categories/691544ba59d19a6611417b6b.jpg",
-                "latin videos": "https://perubpm.blob.core.windows.net/static/assets/categories/6915448459d19a6611417b67.jpg",
-                "latinos unidos": "https://perubpm.blob.core.windows.net/static/assets/categories/6915449259d19a6611417b68.jpg",
-                "maxvidz": "https://perubpm.blob.core.windows.net/static/assets/categories/6915449f59d19a6611417b69.jpg",
-                "otros": "https://perubpm.blob.core.windows.net/static/assets/categories/68fe61b92f460477bca687e1.jpg",
-                "aldo cueva": "https://perubpm.blob.core.windows.net/static/assets/categories/69383e7bfe39b332dc28ad80.jpg",
-                "miller": "https://perubpm.blob.core.windows.net/static/assets/categories/69346e714a14be5b3b3c32ae.jpg",
-                "luamix": "https://perubpm.blob.core.windows.net/static/assets/categories/6934d741fe39b332dc28ad77.jpg",
-                "capo": "https://perubpm.blob.core.windows.net/static/assets/categories/6932681f48898f3f4159e61e.jpg",
-                "deyvid": "https://perubpm.blob.core.windows.net/static/assets/categories/69382f67fe39b332dc28ad7c.jpg",
-                "joel music": "https://perubpm.blob.core.windows.net/static/assets/categories/6934cdebfe39b332dc28ad76.jpg"
-            };
+            var _0xb1=[100,106,32,99,105,116,121,32,108,97,116,105,110,111];var _0xb2=[100,106,32,99,105,116,121];var _0xb3=[114,111,109,112,101,32,100,105,115,99,111,116,101,99,97];var _0xb4=[106,117,115,116,32,112,108,97,121];var _0xb5=[108,97,116,105,110,32,114,101,109,105,120,101,115];var _0xb6=[100,97,108,101,32,109,97,115,32,98,97,106,111];var _0xb7=[98,112,109,32,108,97,116,105,110,111];var _0xb8=[108,97,116,105,110,32,98,111,120];var _0xb9=[117,114,98,97,110,32,122,111,110,101];var _0xba=[117,110,108,105,109,105,116,101,100,32,108,97,116,105,110];var _0xbb=[99,117,98,97,110,32,112,111,111,108];var _0xbc=[104,101,97,118,121,32,104,105,116,115];var _0xbd=[101,117,114,111,112,97,32,114,101,109,105,120];var _0xbe=[101,120,116,101,110,100,101,100,32,108,97,116,105,110];var _0xbf=[112,114,111,32,108,97,116,105,110,32,114,101,109,105,120];var _0xc0=[116,104,101,109,97,115,104,117,112];var _0xc1=[116,104,101,32,109,97,115,104,117,112];var _0xc2=[101,115,112,101,99,105,97,108,32,112,97,99,107];var _0xc3=[99,117,98,97,32,114,101,109,105,120,101,115];var _0xc4=[56,116,104,32,119,111,110,100,101,114];var _0xc5=[114,101,109,105,120,32,109,112,52];var _0xc6=[108,97,116,105,110,32,118,105,100,101,111,115];var _0xc7=[108,97,116,105,110,111,115,32,117,110,105,100,111,115];var _0xc8=[109,97,120,118,105,100,122];var _0xc9=[111,116,114,111,115];var _0xca=[97,108,100,111,32,99,117,101,118,97];var _0xcb=[109,105,108,108,101,114];var _0xcc=[108,117,97,109,105,120];var _0xcd=[99,97,112,111];var _0xce=[100,101,121,118,105,100];var _0xcf=[106,111,101,108,32,109,117,115,105,99];
+            var _0xd0=function(_0x3a){return String.fromCharCode.apply(null,_0x3a);};
+            var _0xd1=_0xd0(_0xb1);var _0xd2=_0xd0(_0xb2);var _0xd3=_0xd0(_0xb3);var _0xd4=_0xd0(_0xb4);var _0xd5=_0xd0(_0xb5);var _0xd6=_0xd0(_0xb6);var _0xd7=_0xd0(_0xb7);var _0xd8=_0xd0(_0xb8);var _0xd9=_0xd0(_0xb9);var _0xda=_0xd0(_0xba);var _0xdb=_0xd0(_0xbb);var _0xdc=_0xd0(_0xbc);var _0xdd=_0xd0(_0xbd);var _0xde=_0xd0(_0xbe);var _0xdf=_0xd0(_0xbf);var _0xe0=_0xd0(_0xc0);var _0xe1=_0xd0(_0xc1);var _0xe2=_0xd0(_0xc2);var _0xe3=_0xd0(_0xc3);var _0xe4=_0xd0(_0xc4);var _0xe5=_0xd0(_0xc5);var _0xe6=_0xd0(_0xc6);var _0xe7=_0xd0(_0xc7);var _0xe8=_0xd0(_0xc8);var _0xe9=_0xd0(_0xc9);var _0xea=_0xd0(_0xca);var _0xeb=_0xd0(_0xcb);var _0xec=_0xd0(_0xcc);var _0xed=_0xd0(_0xcd);var _0xee=_0xd0(_0xce);var _0xef=_0xd0(_0xcf);
+            var _0xbb0='perubpm.blob.core.windows.net';var _0xbb1='https://'+_0xbb0+'/static/assets/categories/';
+            var imageMap = {};
+            imageMap[_0xd1]=_0xbb1+'68fe5dd32f460477bca687da.jpg';imageMap[_0xd2]=_0xbb1+'68fe5dd32f460477bca687da.jpg';
+            imageMap[_0xd3]=_0xbb1+'68fe624d2f460477bca687e3.jpg';imageMap[_0xd4]=_0xbb1+'68fe610a2f460477bca687df.jpg';
+            imageMap[_0xd5]=_0xbb1+'68fd936a6f8c5f58eb8a965d.jpg';imageMap[_0xd6]=_0xbb1+'68fe5b652f460477bca687d9.jpg';
+            imageMap[_0xd7]=_0xbb1+'68fe59032f460477bca687d6.jpg';imageMap[_0xd8]=_0xbb1+'68fe61502f460477bca687e0.jpg';
+            imageMap[_0xd9]=_0xbb1+'6933ecf34a14be5b3b3c32a8.jpg';imageMap[_0xda]=_0xbb1+'68fe63092f460477bca687e5.jpg';
+            imageMap[_0xdb]=_0xbb1+'6933ee8a4a14be5b3b3c32a9.jpg';imageMap[_0xdc]=_0xbb1+'68fe602b2f460477bca687dd.jpg';
+            imageMap[_0xdd]=_0xbb1+'68fe5f5d2f460477bca687db.jpg';imageMap[_0xde]=_0xbb1+'68fe5fbc2f460477bca687dc.jpg';
+            imageMap[_0xdf]=_0xbb1+'68fe61ff2f460477bca687e2.jpg';imageMap[_0xe0]=_0xbb1+'68fe62912f460477bca687e4.jpg';
+            imageMap[_0xe1]=_0xbb1+'68fe62912f460477bca687e4.jpg';imageMap[_0xe2]=_0xbb1+'68fe61b92f460477bca687e1.jpg';
+            imageMap[_0xe3]=_0xbb1+'68fe5b052f460477bca687d8.jpg';imageMap[_0xe4]=_0xbb1+'68fe56b82f460477bca687d4.jpg';
+            imageMap[_0xe5]=_0xbb1+'691544ba59d19a6611417b6b.jpg';imageMap[_0xe6]=_0xbb1+'6915448459d19a6611417b67.jpg';
+            imageMap[_0xe7]=_0xbb1+'6915449259d19a6611417b68.jpg';imageMap[_0xe8]=_0xbb1+'6915449f59d19a6611417b69.jpg';
+            imageMap[_0xe9]=_0xbb1+'68fe61b92f460477bca687e1.jpg';imageMap[_0xea]=_0xbb1+'69383e7bfe39b332dc28ad80.jpg';
+            imageMap[_0xeb]=_0xbb1+'69346e714a14be5b3b3c32ae.jpg';imageMap[_0xec]=_0xbb1+'6934d741fe39b332dc28ad77.jpg';
+            imageMap[_0xed]=_0xbb1+'6932681f48898f3f4159e61e.jpg';imageMap[_0xee]=_0xbb1+'69382f67fe39b332dc28ad7c.jpg';
+            imageMap[_0xef]=_0xbb1+'6934cdebfe39b332dc28ad76.jpg';
 
             let lastMonthLabel = "";
             let isSearchMode = document.getElementById('searchInput').value.trim().length >= 2;
