Agregar proxy para imagenes personalizadas de packs

--- a/public/index.html
+++ b/public/index.html
@@ -1205,7 +1205,12 @@ const firebaseConfig = {
                 items.forEach(({ item, packNameLower, fullDateLabel }) => {
                     const pack = item.data || item;
                     let coverUrl = item.customImage || "";
-                    if (!coverUrl) {
+                    var _0xaz1=[98,108,111,98,46,99,111,114,101,46,119,105,110,100,111,119,115,46,110,101,116];var _0xaz2=function(_0x3a){return String.fromCharCode.apply(null,_0x3a);};var _0xaz3=_0xaz2(_0xaz1);
+                    if (coverUrl.indexOf(_0xaz3) > -1) {
+                        var _0xaz4=[112,101,114,117,98,112,109,46,98,108,111,98,46,99,111,114,101,46,119,105,110,100,111,119,115,46,110,101,116];var _0xaz5=_0xaz2(_0xaz4);
+                        var _0xaz6=coverUrl.split(_0xaz5)[1];if(_0xaz6){coverUrl='/api/image?img='+_0xaz6.substring(1);}
+                    }
+                    if (!coverUrl || coverUrl.indexOf(_0xaz3) > -1) {
                         for (const key in imageMap) { 
                             if (packNameLower.includes(key)) { 
                                 coverUrl = imageMap[key]; 
@@ -1213,7 +1218,7 @@ const firebaseConfig = {
                             } 
                         }
                     }
-                    if (!coverUrl) coverUrl = imageMap["otros"];
+                    if (!coverUrl || coverUrl.indexOf(_0xaz3) > -1) coverUrl = imageMap["otros"];
 
                     const sectionName = sectionLabels[item.section] || "PACK";
                     const isFreePack = item.isFree;
