--- a/public/index.html
+++ b/public/index.html
@@ -1210,12 +1210,14 @@ const firebaseConfig = {
                     
                     // Convertir URL de Azure a proxy si existe
                     if (coverUrl && coverUrl.indexOf('blob.core.windows.net') > -1) {
-                        var _0xaz4=[112,101,114,117,98,112,109,46,98,108,111,98,46,99,111,114,101,46,119,105,110,100,111,119,115,46,110,101,116];var _0xaz5=String.fromCharCode.apply(null,_0xaz4);
-                        var _0xaz6=coverUrl.split(_0xaz5)[1];if(_0xaz6){coverUrl='/api/image?img='+_0xaz6.substring(1);}
+                        var fileName = coverUrl.split('/').pop();
+                        if (fileName) {
+                            coverUrl = '/api/image?img=' + fileName;
+                        }
                     }
                     
-                    // Si no tiene imagen personalizada, buscar en imageMap por nombre
-                    if (!coverUrl) {
+                    // Si no tiene imagen personalizada (ya convertida o vacía), buscar en imageMap
+                    if (!coverUrl || coverUrl.indexOf('/api/image') === -1) {
                         for (const key in imageMap) { 
                             if (packNameLower.includes(key)) { 
                                 coverUrl = imageMap[key]; 
